<resources>
    <string name="app_name">Notes</string>
    <string name="side_menu_text">Oh, hi Mark</string>
    <string name="side_menu_about">About</string>
    <string name="side_menu_settings">Settings</string>
    <string name="lisa">You are tearing me apart, Lisa!</string>
    <string name="side_menu_closed">Side menu closed</string>
    <string name="side_menu_opened">Side menu opened</string>
    <string name="toolbar_search_notes">Search</string>
    <string name="toolbar_sort_notes">Sort</string>
    <string name="toolbar_share_note">Share</string>
    <string name="toolbar_add_note_photo">Attach Photo</string>
    <string name="save_edit_button">Save</string>
    <string name="cancel_edit_button">Cancel</string>
    <string name="choose_header_color">Choose header color:</string>
    <string name="toolbar_add_note">Add Note</string>
    <string name="context_menu_update_note">Update</string>
    <string name="context_menu_delete_note">Delete</string>
    <string name="continue_button_text">Continue</string>
    <string name="sign_out_button">Sign out</string>
    <string name="alert_dialog_warning">Warning!</string>
    <string name="alert_dialog_deletion_text">Are you sure you want to delete this note?</string>
    <string name="alert_dialog_button_yes">Yes</string>
    <string name="alert_dialog_button_no">No</string>
</resources>