<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/toolbar_search_notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_menu_add_note"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:title="@string/toolbar_add_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_menu_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:orderInCategory="2"
        android:title="@string/toolbar_sort_notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="2"
        android:title="@string/toolbar_share_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_menu_add_photo"
        android:icon="@android:drawable/btn_plus"
        android:orderInCategory="2"
        android:title="@string/toolbar_add_note_photo"
        app:showAsAction="ifRoom" />
</menu>