<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/items_margin_start"
    android:layout_marginEnd="@dimen/items_margin_end"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="RtlSymmetry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ffffff"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/items_padding_top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/note_title_text_size"
                android:layout_marginTop="@dimen/items_padding_top"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/edit_note_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/note_contents_text_size"
                android:layout_marginTop="@dimen/items_padding_top"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/items_padding_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/note_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/date_time_text_size"
                    android:gravity="center"
                    android:layout_weight="4" />

                <ImageButton
                    android:id="@+id/date_picker"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_today"/>

                <TextView
                    android:id="@+id/note_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:textSize="@dimen/date_time_text_size" />

                <ImageButton
                    android:id="@+id/time_picker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_recent_history"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/items_margin_start"
                android:layout_marginTop="@dimen/items_padding_top"
                android:text="@string/choose_header_color"
                android:textSize="@dimen/header_color_text_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_margin_bottom"
                android:paddingStart="@dimen/items_margin_start"
                android:layout_marginStart="@dimen/items_margin_start"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_p200"
                    android:layout_width="@dimen/round_button_width"
                    android:layout_height="@dimen/round_button_height"
                    android:layout_marginEnd="@dimen/items_margin_end"
                    app:shapeAppearance="@style/RoundButtonShapeAppearance"
                    app:backgroundTint="@color/purple_200"/>

                <Button
                    android:id="@+id/button_p500"
                    android:layout_width="@dimen/round_button_width"
                    android:layout_height="@dimen/round_button_height"
                    android:layout_marginEnd="@dimen/items_margin_end"
                    app:shapeAppearance="@style/RoundButtonShapeAppearance"
                    app:backgroundTint="@color/purple_500"/>

                <Button
                    android:id="@+id/button_p700"
                    android:layout_width="@dimen/round_button_width"
                    android:layout_height="@dimen/round_button_height"
                    android:layout_marginEnd="@dimen/items_margin_end"
                    app:shapeAppearance="@style/RoundButtonShapeAppearance"
                    app:backgroundTint="@color/purple_700"/>

                <Button
                    android:id="@+id/button_white"
                    android:layout_width="@dimen/round_button_width"
                    android:layout_height="@dimen/round_button_height"
                    android:layout_marginEnd="@dimen/items_margin_end"
                    app:shapeAppearance="@style/RoundButtonShapeAppearance"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="1dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/items_padding_top"
        android:layout_marginStart="@dimen/items_margin_start"
        android:layout_marginEnd="@dimen/items_margin_end"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/save_note_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/items_margin_end"
            android:layout_weight="1"
            android:text="@string/save_edit_button"/>

        <Button
            android:id="@+id/cancel_note_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/items_margin_start"
            android:layout_weight="1"
            android:text="@string/cancel_edit_button"/>

    </LinearLayout>

</LinearLayout>